# travellico

./: README.md  api.json  api.yaml  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Ronaldo  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: home.rs  mod.rs  server.rs
src-tauri/src/server/controllers/project/: mod.rs  project_cont.rs  project_env_cont.rs
src-tauri/src/server/controllers/user/: user_info.rs
src-tauri/src/server/routes/: mod.rs
src-tauri/src/server/routes/project/: project.rs
src-tauri/src/server/routes/user/: mod.rs  user_info.rs  user_main.rs
src/components/: Back.tsx
src/pages/config/settings/: changeName.tsx  settings.tsx
src/pages/main/components/: Greeting.tsx
src/pages/main/components/project/: countries.json  projectCreation.tsx  projectView.tsx
src/pages/main/components/project/edit/: ProjectEdit.tsx
src/pages/main/components/setup/: setup.tsx
src/pages/main/home/: home.tsx
